--- a/README.adoc
+++ b/README.adoc
@@ -38,7 +38,7 @@ RSpec.describe "shelling out to run 'ls'" do
   it "works"
     system('ls') # <3>
 
-    expect(stub).to have_been_called # <4>
+    expect(stub).to have_run # <4>
   end
 end
 ----
@@ -73,17 +73,17 @@ If you want to both write to stdout and set the exit code (a common pair), `Shel
 
 === Specifying the expected number of command invocations:
 
-Called exactly once: `expect(stub).to have_been_called.once`
+Called exactly once: `expect(stub).to have_run.once`
 
-Not called: `expect(stub).to have_been_called.never`
+Not called: `expect(stub).to have_run.never`
 
-Not called (using RSpec expectation negation): `expect(stub).to_not have_been_called`
+Not called (using RSpec expectation negation): `expect(stub).to_not have_run`
 
-Called exactly `n` times: `expect(stub).to have_been_called.times(n)`
+Called exactly `n` times: `expect(stub).to have_run.times(n)`
 
-Called more than `n` times: `expect(stub).to have_been_called.more_than(n)`
+Called more than `n` times: `expect(stub).to have_run.more_than(n)`
 
-Called fewer than `n` times: `expect(stub).to have_been_called.fewer_than(n)`
+Called fewer than `n` times: `expect(stub).to have_run.fewer_than(n)`
 
 `less_than` can be used as an alias for `fewer_than`
 
