rename all and_X command stub methods to to_X, b/c you're stubbing to do something
* FEATURE: `#to_output` is an alias of `#and_output`
* FEATURE: `#to_return` is an alias of `#and_return`
* FEATURE: `#to_exit` is an alias of `#and_exit`
* FEATURE: `#to_succeed` is an alias of `#and_succeed`
* FEATURE: `#to_fail` is an alias of `#and_fail`
* DEPRECATION: `#and_output` is deprecated and will be removed in 1.0.0. Use `#to_output` instead.
* DEPRECATION: `#and_return` is deprecated and will be removed in 1.0.0. Use `#to_return` instead.
* DEPRECATION: `#and_exit` is deprecated and will be removed in 1.0.0. Use `#to_exit` instead.
* DEPRECATION: `#and_succeed` is deprecated and will be removed in 1.0.0. Use `#to_succeed` instead.
* DEPRECATION: `#and_fail` is deprecated and will be removed in 1.0.0. Use `#to_fail` instead.

--- a/README.adoc
+++ b/README.adoc
@@ -61,15 +61,15 @@ NOTE: ShellMock always matches as strictly as possible, so if you stubbed both `
 
 === Setting the behavior of the command invocation:
 
-Have the mock command invocation write to stdout: `ShellMock.stub_command('ls').and_output("\n")`
+Have the mock command invocation write to stdout: `ShellMock.stub_command('ls').to_output("\n")`
 
-Set the mock command invocation's exit status: `ShellMock.stub_command('ls').and_exit(2)`
+Set the mock command invocation's exit status: `ShellMock.stub_command('ls').to_exit(2)`
 
-Set the mock command invocation's exit status to `0`: `ShellMock.stub_command('ls').and_succeed`
+Set the mock command invocation's exit status to `0`: `ShellMock.stub_command('ls').to_succeed`
 
-Set the mock command invocation's exit status to `1`: `ShellMock.stub_command('ls').and_fail`
+Set the mock command invocation's exit status to `1`: `ShellMock.stub_command('ls').to_fail`
 
-If you want to both write to stdout and set the exit code (a common pair), `ShellMock.stub_command('ls').and_return("\n")` will both have the command invocation write the passed string to stdout, and will set the mock command invocation's exit status to `0`.
+If you want to both write to stdout and set the exit code (a common pair), `ShellMock.stub_command('ls').to_return("\n")` will both have the command invocation write the passed string to stdout, and will set the mock command invocation's exit status to `0`.
 
 === Specifying the expected number of command invocations:
 
